# BORAM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example1.cpp  example1_timexsigma.nb  example2.cpp  example2_pdelta.nb  physics.h
boram/: am.h  boram.h  lbfgs.h  linesearch.h  minsolver.h  monitor.h
third-party-licenses/: LICENSE
